[gd_scene load_steps=13 format=2]

[ext_resource path="res://Transitions.gd" type="Script" id=1]
[ext_resource path="res://gui/m5x7-32.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/Theme.theme" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_from_black"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BlackRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_black"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BlackRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="AtlasTexture" id=3]
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LoadingContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LoadingContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Transitions" type="CanvasLayer"]
pause_mode = 2
layer = 120
script = ExtResource( 1 )

[node name="BlackRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnimations" type="AnimationPlayer" parent="."]
anims/fade_from_black = SubResource( 1 )
anims/fade_to_black = SubResource( 2 )

[node name="LoadingContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
custom_constants/margin_right = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingContainer"]
margin_left = 4.0
margin_right = 316.0
margin_bottom = 178.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LoadingContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 312.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="LoadingContainer/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 208.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="LoadingContainer/VBoxContainer/HBoxContainer/Control"]
position = Vector2( 0, 8 )
frames = SubResource( 7 )
frame = 2
playing = true
centered = false

[node name="LoadingLabel" type="RichTextLabel" parent="LoadingContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 312.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_active = false

[node name="LoadingProgress" type="ProgressBar" parent="LoadingContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 312.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 4 )
size_flags_horizontal = 3
size_flags_vertical = 4
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingAnimations" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[node name="LoadDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="LoadDelayTimer" to="." method="_on_LoadDelayTimer_timeout"]
